cabal-version: 3.6

name:                oathbreaker
version:             0.1.0.0
synopsis:            Advanced RF signal processing and threat detection
description:         A Haskell project for simulating, analyzing, and defending against RF threats.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Your Name
maintainer:          your.email@example.com
category:            Security
build-type:          Simple

extra-source-files:  CHANGELOG.md

library
  exposed-modules:     RFProcessor.SignalAcquisition
                     , ThreatDetection.AnomalyDetection
                     , ProactiveDefense.InterferenceGeneration
                     , ProactiveDefense.AdaptiveJamming
                     , ThreatDetection.SignatureMatching
                     , RFProcessor.DigitalSignalProcessing
                     , RFProcessor.SpectralAnalysis
                     , Utils.DataStructures
                     , Utils.SDRInterface
                     , Common.Types
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
      base >=4.17 && <5,
      vector,
      hmatrix >=0.20.0.0,
      bytestring >=0.11.3.1,
      binary >=0.8.9.1,
      statistics >=0.16.0.0,
      fft >=0.1.8.7,
      random,
      mtl >=2.2,
      mwc-random,
      containers,
      transformers,
      Chart,
      time,
      text,
      directory,
      unix >=2.8.5.1 && <3.0,
      os-string >=2.0.6 && <3.0,
      filepath >=1.4.100.4 && <2.0

executable oathbreaker
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
      base >=4.17 && <5,
      oathbreaker,
      hmatrix,
      fft >=0.1.8.7,
      Chart,
      time,
      text,
      directory,
      containers,
      transformers,
      mtl,
      unix >=2.8.5.1 && <3.0,
      os-string >=2.0.6 && <3.0,
      filepath >=1.4.100.4 && <2.0

test-suite oathbreaker-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
      base >=4.17 && <5,
      oathbreaker,
      hmatrix,
      fft >=0.1.8.7,
      HUnit >=1.6.0.0,
      QuickCheck,
      hspec,
      bytestring,
      binary,
      random,
      containers,
      transformers,
      mtl,
      unix >=2.8.5.1 && <3.0,
      os-string >=2.0.6 && <3.0,
      filepath >=1.4.100.4 && <2.0
