cabal-version: 3.6
name:                oathbreaker
version:             0.1.1.0
synopsis:            Advanced RF Signal Processing and Threat Detection
description:         A Haskell project for simulating, analyzing, and defending against RF threats.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Your Name
maintainer:          your.email@example.com
category:            Security
build-type:          Simple
extra-doc-files:     CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/jahaniskhan/oathbreaker.git

common shared-deps
  build-depends:
      base >=4.7 && <5
    , containers >=0.6 && <0.7
    , vector >=0.12.1 && <0.14
    , mtl >=2.2 && <3
    , transformers >=0.6 && <0.7
    , exceptions >=0.10 && <0.11
    , mwc-random >=0.15 && <0.16
    , bytestring >=0.11 && <0.13
    , binary >=0.8.9 && <0.10
    , random >=1.2 && <1.4
    , filepath >=1.4.100.4 && <2.0
    , unix >=2.8.5.1 && <3.0
    , hmatrix >=0.20.2 && <0.21 
    , hmatrix-gsl >=0.19.0.1 && <0.20
    , hashable >=1.4.6.0 && <2.0
    , aeson >=2.2 && <2.4
    , array >=0.5.4 && <0.6
    , Chart >=1.8.0.3 && <1.10
    , Chart-diagrams >=1.8.0.2 && <1.10
    , diagrams-lib >=1.4.3 && <1.5
    , diagrams-svg >=1.4.3 && <1.5
    , diagrams-contrib >=1.4.3 && <1.5
  default-language: Haskell2010
  default-extensions:
      OverloadedStrings
  ghc-options: -Wall -O2

library
  import: shared-deps
  hs-source-dirs: src
  exposed-modules:
      RFProcessor.SignalAcquisition
    , ThreatDetection.AnomalyDetection
    , ProactiveDefense.AdaptiveJamming
    , ThreatDetection.SignatureMatching
    , RFProcessor.DigitalSignalProcessing
    , RFProcessor.SpectralAnalysis
    , Utils.DataStructures
    , Utils.SDRInterface
    , Common.Types
    , Utils.PCA
    , Utils.Wavelet
    , Utils.MathFunction
    , Simulator.SignalGenerator

executable oathbreaker-exe
  import: shared-deps
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      oathbreaker
    , optparse-applicative >=0.14 && <1.0
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite oathbreaker-test
  import: shared-deps
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      oathbreaker
    , hspec >=2.7 && <3
  default-language: Haskell2010
